UX: fix extra space and wrapping in topic lists (#578)

--- a/assets/stylesheets/common/discourse-post-event-core-ext.scss
+++ b/assets/stylesheets/common/discourse-post-event-core-ext.scss
@@ -6,10 +6,12 @@
   }
 }
 
-.link-top-line {
+.main-link {
   .event-date-container-wrapper {
     // prevents new dot from breaking separately onto next line
     white-space: nowrap;
+    // hack to hide extra whitespace in event-relative-date
+    margin-right: -0.25em;
   }
 }
 
